Fixed alignment on todos

--- a/src/components/todos-and-activities/TodosList/TodosList.module.css
+++ b/src/components/todos-and-activities/TodosList/TodosList.module.css
@@ -9,6 +9,7 @@
     color: black;
     border: 1px solid #e0e0e0;
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.08), 0 1px 2px rgba(0, 0, 0, 0.06);
+    align-items: center;
 }
 
 .completed {
